Replace `URL` constructor with `URI.create()` for improved URL creation safety.